estructura segunda sección

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/grid.css">
+  <link rel="stylesheet" href="fonts/stylesheet.css">
 </head>
 <body>
   <header>
@@ -33,12 +34,12 @@
   </header>
   <main class="hero"> 
     <section class="hero-container container-p row" >
-      <div class="hero-presentation col-6">
+      <div class="hero-presentation col-5">
         <h1>El bienestar de tu hijo determinará su futuro</h1>
         <p>Su desarrollo integral es importante para nosotros. </p>
-        <a href=""><button>Agenda tu cita</button></a>
+        <a href="#"><button>Agenda tu cita</button></a>
       </div>
-      <figure class="hero-image col-6">
+      <figure class="hero-image col-7">
         <img src="images/hero-image.png" alt="">
       </figure>
     </section>
@@ -49,5 +50,17 @@
      
     </div>
   </main>
+  <section class="profesional-section">
+    <div class="profesional-container container-p row">
+
+      <figure class="profesional-image col-6">
+        <img src="images/therapy-online.png" alt="">
+      </figure>
+      <div class="profesional-description col-6">
+        <h2>Contamos con un equipo humano de alta calidad</h2>
+        <p>Nuestro recurso humano está compuesto de profesionales expertos y comprometidos con la responsabilidad social, con el fin de garantizar la más elevada calidad asistencial en detección, prevención, promoción, diagnóstico e intervención en las áreas del neurodesarrollo y el aprendizaje permitiendo un servicio óptimo.</p>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
