estructura de la sección beneficios

--- a/index.html
+++ b/index.html
@@ -54,13 +54,60 @@
     <div class="profesional-container container-p row">
 
       <figure class="profesional-image col-6">
-        <img src="images/therapy-online.png" alt="">
+        <img src="images/therapy-online.png" alt="">  
+        <div class="back-therapy">
+          <img src="/images/fondo-doctor.svg" alt="">
+        </div>
       </figure>
       <div class="profesional-description col-6">
         <h2>Contamos con un equipo humano de alta calidad</h2>
         <p>Nuestro recurso humano está compuesto de profesionales expertos y comprometidos con la responsabilidad social, con el fin de garantizar la más elevada calidad asistencial en detección, prevención, promoción, diagnóstico e intervención en las áreas del neurodesarrollo y el aprendizaje permitiendo un servicio óptimo.</p>
       </div>
     </div>
+  </section>
+  <section class="benefits">
+    <div class="wave-benefits-top"></div>
+    <div class="benefits-background">
+      <article class="benefits-container container-p row">
+        <div class="tittle-benefits col-4">
+          <h2>Beneficios de la terapia Online y Domiciliaria</h2>
+
+        </div>
+        <div class="cards-item col-8">
+          <div class="card">
+            <figure>
+              <img src="images/Avatar.svg" alt="">
+            </figure>
+            <h4>Fácil acceso</h4>
+            <p>Nos permite brindar las consultas en cualquier zona, permitiendo que el tiempo y la distancia no sean un obstáculo.</p>
+          </div>
+          <div class="card">
+            <figure>
+              <img src="images/Avatar.svg" alt="">
+            </figure>
+            <h4>Fácil acceso</h4>
+            <p>Nos permite brindar las consultas en cualquier zona, permitiendo que el tiempo y la distancia no sean un obstáculo.</p>
+          </div>
+          <div class="card">
+            <figure>
+              <img src="images/Avatar.svg" alt="">
+            </figure>
+            <h4>Fácil acceso</h4>
+            <p>Nos permite brindar las consultas en cualquier zona, permitiendo que el tiempo y la distancia no sean un obstáculo.</p>
+          </div>
+          <div class="card">
+            <figure>
+              <img src="images/Avatar.svg" alt="">
+            </figure>
+            <h4>Fácil acceso</h4>
+            <p>Nos permite brindar las consultas en cualquier zona, permitiendo que el tiempo y la distancia no sean un obstáculo.</p>
+          </div>
+
+        </div>
+
+      </article>
+    </div>
+    <div class="wave-benefits-bottom"></div>
   </section>
 </body>
 </html>
