--- a/index.html
+++ b/index.html
@@ -85,22 +85,22 @@
             <figure>
               <img src="images/Avatar.svg" alt="">
             </figure>
-            <h4>Fácil acceso</h4>
-            <p>Nos permite brindar las consultas en cualquier zona, permitiendo que el tiempo y la distancia no sean un obstáculo.</p>
+            <h4>Seguridad</h4>
+            <p>Garantizamos los niveles de confidencialidad y seguridad que nos permiten proteger tu información.</p>
           </div>
           <div class="card">
             <figure>
               <img src="images/Avatar.svg" alt="">
             </figure>
-            <h4>Fácil acceso</h4>
-            <p>Nos permite brindar las consultas en cualquier zona, permitiendo que el tiempo y la distancia no sean un obstáculo.</p>
+            <h4>Atención Domiciliaria</h4>
+            <p>Podrás obtener el servicio en la comodidad de tu hogar, evitando los contra tiempos de trafico, distancia y tiempo.</p>
           </div>
           <div class="card">
             <figure>
               <img src="images/Avatar.svg" alt="">
             </figure>
-            <h4>Fácil acceso</h4>
-            <p>Nos permite brindar las consultas en cualquier zona, permitiendo que el tiempo y la distancia no sean un obstáculo.</p>
+            <h4>Calidad</h4>
+            <p>Una atención integral sin perder la eficacia, eficiencia y continuidad de nuestros procesos.</p>
           </div>
 
         </div>
@@ -108,6 +108,32 @@
       </article>
     </div>
     <div class="wave-benefits-bottom"></div>
+  </section>
+  <section class="step-content">
+    <h2>¿Necesitas terapia online y/o</h2> 
+    <h2>para tus hijos?</h2>
+    <span>Ten en cuenta los siguientes pasos:</span>
+    <!-- <article class="grid-container">
+      <div class="step-schedule">
+        <figure>
+          <img src="images/step-shedule.svg" alt="">
+        </figure>
+        <h3>Agenda tu cita</h3>
+      </div>
+      <div class="step-pay">
+        <figure>
+          <img src="images/step-service.svg" alt="">
+        </figure>
+        <h3>Realiza tu pago</h3>
+      </div>
+      <div class="step-service">
+        <figure>
+          <img src="images/step-pay.svg" alt="">
+        </figure>
+        <h3>Obten tu sevicio</h3>
+      </div>
+    </article> -->
+    <img src="images/step-process.svg" alt="">
   </section>
 </body>
 </html>
