--- a/index.html
+++ b/index.html
@@ -135,5 +135,39 @@
     </article> -->
     <img src="images/step-process.svg" alt="">
   </section>
+  <section class="therapy-services">
+    <svg class="wave-service-top" xmlns="http://www.w3.org/2000/svg" width="1919" height="145.423" viewBox="0 0 1919 145.423"><g transform="translate(7212.5 -8122.077)"><path d="M1919,145.424h-.173l-.016-.852,0-.226a28.364,28.364,0,0,0-4.576-4.266,117.074,117.074,0,0,0-18.188-11.463,314.87,314.87,0,0,0-38.492-16.659c-18.764-6.855-40.8-13.534-65.491-19.852-62.878-16.088-143.2-29.975-238.743-41.278-56.724-6.71-119.518-12.572-186.639-17.421-73.827-5.334-154.711-9.576-240.405-12.607-156.6,2.723-445.706,26.964-700.782,48.351h-.013l-.078.007-.026,0-.038,0-.024,0-.087.007h-.006l-.023,0-.062.005-.272.023C336,76.653,252.073,83.691,178.98,89.38,97.031,95.759,40.427,99.527.844,101.238L.01,145.423H0V88.352c35.871-.7,78.985-3.646,135.684-9.26C191.155,73.6,254.352,66.043,321.26,58.042l.047-.006.044-.005.043-.005.1-.012.19-.023.01,0,.022,0,.05-.006C428.716,45.191,549.939,30.695,681.473,19.4,833.441,6.345,971.377,0,1103.164,0c57.892,0,116.738,1.279,174.905,3.8,52.936,2.3,106.5,5.668,159.206,10.024,88.793,7.337,176.916,17.571,261.921,30.417,33.373,5.044,66.35,10.51,98.015,16.247,25.353,4.593,49.886,9.361,72.919,14.171,22.111,4.617,38.78,8.439,48.87,10.831v59.93Z" transform="translate(-7212.5 8122.077)" fill="#fedaeb" opacity="0.5"/><path d="M1942.314,152.962H23.479l.844-44.686c39.543-1.709,96.147-5.477,178.135-11.859C275.55,90.728,359.65,83.677,448.687,76.211h.011c255.177-21.4,544.4-45.649,701.055-48.374,85.7,3.031,166.579,7.273,240.4,12.607,67.115,4.85,129.909,10.711,186.637,17.421,95.543,11.3,175.868,25.189,238.744,41.277,24.7,6.32,46.735,13,65.491,19.852a314.612,314.612,0,0,1,38.493,16.659,116.974,116.974,0,0,1,18.188,11.463,28.857,28.857,0,0,1,4.576,4.266l.028,1.579Z" transform="translate(-7235.979 8114.038)" fill="#fedaeb"/></g></svg>
+    <div class="therapy-services-content">
+      <h2>Conoce nuestros servicios</h2>
+      <h2>terapéuticos especializados</h2>
+      <span>Especialistas en Neurodesarrollo y Aprendizaje:</span>
+
+
+      <div class="grid-services">
+        <article class="service-item">
+          <img src="images/icon-service.svg" alt="">
+          <h5>Neuropsicología Clínica</h5>
+        </article>
+        <article class="service-item">
+          <img src="images/icon-service.svg" alt="">
+          <h5>Psicología Clínica</h5>
+        </article>
+        <article class="service-item">
+          <img src="images/icon-service.svg" alt="">
+          <h5>Fisioterapia</h5>
+        </article>
+        <article class="service-item">
+          <img src="images/icon-service.svg" alt="">
+          <h5>Terapia Ocupacional</h5>
+        </article>
+        <article class="service-item">
+          <img src="images/icon-service.svg" alt="">
+          <h5>Fonoaudiología</h5>
+        </article>
+      </div>
+    </div>
+    <svg class="wave-service-bottom" xmlns="http://www.w3.org/2000/svg" width="1920" height="121.404" viewBox="0 0 1920 121.404"><path d="M1020.158,573.4c-57.233,0-118.348-1.336-181.647-3.97-57.554-2.4-118.2-5.918-180.252-10.468C553.738,551.3,443.323,540.615,330.079,527.2c-44.484-5.269-89.52-10.976-133.857-16.965-35.478-4.792-70.577-9.771-104.322-14.8C35.044,486.966,1.4,481.239,0,481V452H1920v29l-.037.009c-2.818.615-28.81,6.248-73.063,14.429-27.2,5.029-55.82,10.008-85.053,14.8-36.541,5.989-74.145,11.7-111.768,16.965-95.779,13.413-192.279,24.1-286.821,31.764-56.128,4.55-112.188,8.072-166.623,10.468C1136.767,572.068,1077.391,573.4,1020.158,573.4Z" transform="translate(0 -452)" fill="#fedaeb"/></svg>
+
+  </section>
 </body>
 </html>
