--- a/nav-bar.html
+++ b/nav-bar.html
@@ -7,8 +7,8 @@
   <!-- Bootstrap files (jQuery first, then Popper.js, then Bootstrap JS) -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" type="text/javascript"></script>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <!-- <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/styles.css"> -->
 </head>
 <body>
 
