--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ crossorigin="anonymous"></script>
     <img src="images/step-process.svg" alt="">
   </section>
   <section class="therapy-services" id="services">
-    <svg class="wave-service-top" xmlns="http://www.w3.org/2000/svg" width="1919" height="145.423" viewBox="0 0 1919 145.423"><g transform="translate(7212.5 -8122.077)"><path d="M1919,145.424h-.173l-.016-.852,0-.226a28.364,28.364,0,0,0-4.576-4.266,117.074,117.074,0,0,0-18.188-11.463,314.87,314.87,0,0,0-38.492-16.659c-18.764-6.855-40.8-13.534-65.491-19.852-62.878-16.088-143.2-29.975-238.743-41.278-56.724-6.71-119.518-12.572-186.639-17.421-73.827-5.334-154.711-9.576-240.405-12.607-156.6,2.723-445.706,26.964-700.782,48.351h-.013l-.078.007-.026,0-.038,0-.024,0-.087.007h-.006l-.023,0-.062.005-.272.023C336,76.653,252.073,83.691,178.98,89.38,97.031,95.759,40.427,99.527.844,101.238L.01,145.423H0V88.352c35.871-.7,78.985-3.646,135.684-9.26C191.155,73.6,254.352,66.043,321.26,58.042l.047-.006.044-.005.043-.005.1-.012.19-.023.01,0,.022,0,.05-.006C428.716,45.191,549.939,30.695,681.473,19.4,833.441,6.345,971.377,0,1103.164,0c57.892,0,116.738,1.279,174.905,3.8,52.936,2.3,106.5,5.668,159.206,10.024,88.793,7.337,176.916,17.571,261.921,30.417,33.373,5.044,66.35,10.51,98.015,16.247,25.353,4.593,49.886,9.361,72.919,14.171,22.111,4.617,38.78,8.439,48.87,10.831v59.93Z" transform="translate(-7212.5 8122.077)" fill="#fedaeb" opacity="0.5"/><path d="M1942.314,152.962H23.479l.844-44.686c39.543-1.709,96.147-5.477,178.135-11.859C275.55,90.728,359.65,83.677,448.687,76.211h.011c255.177-21.4,544.4-45.649,701.055-48.374,85.7,3.031,166.579,7.273,240.4,12.607,67.115,4.85,129.909,10.711,186.637,17.421,95.543,11.3,175.868,25.189,238.744,41.277,24.7,6.32,46.735,13,65.491,19.852a314.612,314.612,0,0,1,38.493,16.659,116.974,116.974,0,0,1,18.188,11.463,28.857,28.857,0,0,1,4.576,4.266l.028,1.579Z" transform="translate(-7235.979 8114.038)" fill="#fedaeb"/></g></svg>
+    <div class="wave-service-top"></div>
     <div class="therapy-services-content">
       <h2>Conoce nuestros servicios</h2>
       <h2>terapéuticos especializados</h2>
@@ -175,7 +175,7 @@ crossorigin="anonymous"></script>
         </article>
       </div>
     </div>
-    <svg class="wave-service-bottom" xmlns="http://www.w3.org/2000/svg" width="1920" height="121.404" viewBox="0 0 1920 121.404"><path d="M1020.158,573.4c-57.233,0-118.348-1.336-181.647-3.97-57.554-2.4-118.2-5.918-180.252-10.468C553.738,551.3,443.323,540.615,330.079,527.2c-44.484-5.269-89.52-10.976-133.857-16.965-35.478-4.792-70.577-9.771-104.322-14.8C35.044,486.966,1.4,481.239,0,481V452H1920v29l-.037.009c-2.818.615-28.81,6.248-73.063,14.429-27.2,5.029-55.82,10.008-85.053,14.8-36.541,5.989-74.145,11.7-111.768,16.965-95.779,13.413-192.279,24.1-286.821,31.764-56.128,4.55-112.188,8.072-166.623,10.468C1136.767,572.068,1077.391,573.4,1020.158,573.4Z" transform="translate(0 -452)" fill="#fedaeb"/></svg>
+    <div class="wave-service-bottom"></div>
   </section>
   <section class="consulting-service container-p row ">
     <h2>Asesoría y consultoría</h2>
@@ -211,26 +211,28 @@ crossorigin="anonymous"></script>
     </article>
   </section>
   <footer>
-    <svg class="wave-footer" xmlns="http://www.w3.org/2000/svg" width="1921.002" height="151.671" viewBox="0 0 1921.002 151.671"><g transform="translate(7059.502 -8943.83)"><path d="M46.5,119.721v0h0V65.859c90.6-13.386,154.038-22.058,212.107-29,65.588-7.838,125.786-13.57,189.448-18.038,64.111-4.5,134.431-7.906,221.3-10.724,78.022-2.53,172.909-4.707,307.662-7.059C1016.623.35,1057,0,1097.016,0c74.451,0,150.789,1.2,226.9,3.581,69.153,2.16,139.65,5.337,209.533,9.441,117.695,6.913,235.818,16.551,351.088,28.648,27.632,2.9,55.378,5.975,82.467,9.136V87.187c-63.2-7.27-107.135-12.184-146.919-16.432-68.224-7.287-123.7-12.49-174.573-16.374-109.248-8.343-211.925-11.747-354.4-11.747-83.129,0-182.207,1.11-331.292,3.713-44.455.775-89.878,2.017-135.006,3.69-43.036,1.6-86.941,3.625-130.5,6.03C613.786,60.515,531.5,66.413,449.736,73.6,314.451,85.49,178.783,101.007,46.5,119.721Z" transform="translate(-7106 8943.83)" fill="#6352ff" opacity="0.5"/><path d="M0,94.177l0,0H0V45.268c59.087-7.829,109.915-13.707,159.962-18.5,26.381-2.526,52.27-4.726,79.147-6.726,26.971-2.009,54.406-3.775,83.871-5.4C380.13,11.5,442.97,9,520.743,6.775c69.872-2,151.353-3.766,264.2-5.736C824.491.35,864.865,0,904.942,0c74.492,0,150.831,1.205,226.9,3.582,69.2,2.161,139.693,5.338,209.533,9.441,38.054,2.235,76.672,4.79,114.781,7.594-62.431-2.406-129.651-3.528-211.545-3.528-83.081,0-182.159,1.11-331.293,3.712-44.413.776-89.837,2.018-135.007,3.691-43.054,1.6-86.96,3.625-130.5,6.03-80.567,4.45-162.853,10.348-244.573,17.531C267.963,59.944,132.295,75.462,0,94.176Z" transform="translate(-7059.5 8969.375)" fill="#6352ff" opacity="0.5"/><path d="M1954.5,109.036H33.5V77.086C165.816,58.369,301.484,42.851,436.737,30.964,518.481,23.78,600.767,17.882,681.31,13.433,724.847,11.027,768.753,9,811.806,7.4c45.116-1.673,90.539-2.914,135.006-3.69C1095.9,1.11,1194.983,0,1278.1,0c142.468,0,245.146,3.4,354.4,11.747,50.875,3.884,106.347,9.086,174.573,16.374,39.848,4.255,83.936,9.186,147.419,16.49v64.425Z" transform="translate(-7093 8986.465)" fill="#6352ff"/></g></svg>
-    <div class="footer-container container-p row">
+    <div class="wave-footer"></div>
+    <div class="footer-content">
+      <div class="footer-container container-p row">
 
-      <div class="logo-social-link">
-        <a href="" class="logo-neruonline-white"><img src="images/logo-neruonline-white.svg" alt=""></a>
-  
-        <ul>
-          <li><a href=""><img src="images/facebook-icon.svg" alt=""></a></li>
-          <li><a href=""><img src="images/instagram-icon.svg" alt=""></a></li>
-          <li><a href=""><img src="images/twitter-icon.svg" alt=""></a></li>
-          <li><a href=""><img src="images/youtube-icon.svg" alt=""></a></li>
-        </ul>
-      </div>
-      <div class="contact-dates">
-        <h3>Atención al cliente</h3>
-        <ul>
-          <li><a href="">info@ceentir.com</a></li>
-          <li><a href="">3016879070</a></li>
-          <li><a href="">3229457056</a></li>
-        </ul>
+        <div class="logo-social-link">
+          <a href="" class="logo-neruonline-white"><img src="images/logo-neruonline-white.svg" alt=""></a>
+    
+          <ul>
+            <li><a href=""><img src="images/facebook-icon.svg" alt=""></a></li>
+            <li><a href=""><img src="images/instagram-icon.svg" alt=""></a></li>
+            <li><a href=""><img src="images/twitter-icon.svg" alt=""></a></li>
+            <li><a href=""><img src="images/youtube-icon.svg" alt=""></a></li>
+          </ul>
+        </div>
+        <div class="contact-dates">
+          <h3>Atención al cliente</h3>
+          <ul>
+            <li><a href="">info@ceentir.com</a></li>
+            <li><a href="">3016879070</a></li>
+            <li><a href="">3229457056</a></li>
+          </ul>
+        </div>
       </div>
     </div>
   </footer>
