--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ crossorigin="anonymous"></script>
     <div class="wave-benefits-bottom"></div>
   </section>
   <section class="step-content">
-    <h2>¿Necesitas terapia online y/o</h2> 
+    <h2>¿Necesitas terapia online y/o Asesoría</h2> 
     <h2>para tus hijos?</h2>
     <span>Ten en cuenta los siguientes pasos:</span>
     <!-- <article class="grid-container">
