--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@ crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/grid.css">
   <link rel="stylesheet" href="fonts/stylesheet.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images//favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   <script src="js/main.js" type="text/javascript"></script>
   <!-- Principio del widget de enlace de Calendly -->
 <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
