--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ crossorigin="anonymous"></script>
       <div class="hero-presentation col-5">
         <h1>El bienestar de tu hijo determinará su futuro</h1>
         <p>Su desarrollo integral es importante para nosotros. </p>
-        <a href="#"><button>Agenda tu cita</button></a>
+        <a href="#plans" class="scrollto nav-link"><button>Agenda tu cita</button></a>
       </div>
       <figure class="hero-image col-7">
         <img src="images/hero-image.png" alt="">
@@ -89,28 +89,28 @@ crossorigin="anonymous"></script>
         <div class="cards-item col-8">
           <div class="card">
             <figure>
-              <img src="images/Avatar.svg" alt="">
+              <img src="images/icon-acces.svg" alt="">
             </figure>
             <h4>Fácil acceso</h4>
             <p>Nos permite brindar las consultas en cualquier zona, permitiendo que el tiempo y la distancia no sean un obstáculo.</p>
           </div>
           <div class="card">
             <figure>
-              <img src="images/Avatar.svg" alt="">
+              <img src="images/icon-security.svg" alt="">
             </figure>
             <h4>Seguridad</h4>
             <p>Garantizamos los niveles de confidencialidad y seguridad que nos permiten proteger tu información.</p>
           </div>
           <div class="card">
             <figure>
-              <img src="images/Avatar.svg" alt="">
+              <img src="images/icon-delivery.svg" alt="">
             </figure>
             <h4>Atención Domiciliaria</h4>
             <p>Podrás obtener el servicio en la comodidad de tu hogar, evitando los contra tiempos de trafico, distancia y tiempo.</p>
           </div>
           <div class="card">
             <figure>
-              <img src="images/Avatar.svg" alt="">
+              <img src="images/icon-quality.svg" alt="">
             </figure>
             <h4>Calidad</h4>
             <p>Una atención integral sin perder la eficacia, eficiencia y continuidad de nuestros procesos.</p>
@@ -202,7 +202,7 @@ crossorigin="anonymous"></script>
       </div>
       <div class="plan-online plan-item">
         <h3>Cita Online</h3>
-        <img src="images/illustration-docmiciliary.svg" alt="">
+        <img src="images/illustration-online.svg" alt="">
         <ul>
           <li>Sesión de 40min</li>
           <li>Zona de cobertura</li>
@@ -210,7 +210,7 @@ crossorigin="anonymous"></script>
           <li>Sabana Centro:</li>
           <li>Chía, Cajicá, Zipaquirá, Sopo, Tabio</li>
         </ul>
-        <a href=""><button>Agenda tu cita</button></a>
+        <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/camodesing/30min'});return false;"><button>Agenda tu cita</button></a>
       </div>
     </article>
   </section>
@@ -223,10 +223,10 @@ crossorigin="anonymous"></script>
           <a href="" class="logo-neruonline-white"><img src="images/logo-neruonline-white.svg" alt=""></a>
     
           <ul>
-            <li><a href=""><img src="images/facebook-icon.svg" alt=""></a></li>
-            <li><a href=""><img src="images/instagram-icon.svg" alt=""></a></li>
-            <li><a href=""><img src="images/twitter-icon.svg" alt=""></a></li>
-            <li><a href=""><img src="images/youtube-icon.svg" alt=""></a></li>
+            <li><a href="https://www.facebook.com/CEENTIR/" target="_blank"><img src="images/facebook-icon.svg" alt=""></a></li>
+            <li><a href="https://www.instagram.com/ceentir/" target="_blank"><img src="images/instagram-icon.svg" alt=""></a></li>
+            <li><a href="https://twitter.com/ceentirsas" target="_blank"><img src="images/twitter-icon.svg" alt=""></a></li>
+            <li><a href="https://www.youtube.com/channel/UC18jwHktTqPvRGQ6Dc8YNQA" target="_blank"><img src="images/youtube-icon.svg" alt=""></a></li>
           </ul>
         </div>
         <div class="contact-dates">
@@ -238,6 +238,9 @@ crossorigin="anonymous"></script>
           </ul>
         </div>
       </div>
+    </div>
+    <div class="copyright">
+      <p>Copyright 2020 Ceentir S.A.S</p>
     </div>
   </footer>
   
