--- a/index.html
+++ b/index.html
@@ -33,16 +33,14 @@ crossorigin="anonymous"></script>
        <button class="navbar-toggler" type="button" id="burger-menu" data-toggle="collapse" data-target="#main_nav">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="main_nav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a href="#benefits" class="scrollto nav-link active"> Beneficios </a></li>
-        <li class="nav-item"><a href="#services" class="scrollto nav-link"> Servicios </a></li>
-        <li class="nav-item"><a href="#plans" class="scrollto nav-link"> Agenda tu cita </a></li>
-        <!-- <li class="nav-item"><a href="#section_4" class="scrollto nav-link"> Section 4 </a></li> -->
-      </ul>
-    
+      <div class="collapse navbar-collapse" id="main_nav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a href="#benefits" class="scrollto nav-link active"> Beneficios </a></li>
+          <li class="nav-item"><a href="#services" class="scrollto nav-link"> Servicios </a></li>
+          <li class="nav-item"><a href="#plans" class="scrollto nav-link"> Agenda tu cita </a></li>
+          <!-- <li class="nav-item"><a href="#section_4" class="scrollto nav-link"> Section 4 </a></li> -->
+        </ul>
       </div> <!-- navbar-collapse.// -->
-    
     </nav> 
   </header>
   <main class="hero"> 
@@ -69,7 +67,7 @@ crossorigin="anonymous"></script>
       <figure class="profesional-image col-6">
         <img src="images/therapy-online.png" alt="">  
         <div class="back-therapy">
-          <img src="/images/fondo-doctor.svg" alt="">
+          <img src="images/fondo-doctor.svg" alt="">
         </div>
       </figure>
       <div class="profesional-description col-6">
@@ -117,7 +115,6 @@ crossorigin="anonymous"></script>
           </div>
 
         </div>
-
       </article>
     </div>
     <div class="wave-benefits-bottom"></div>
@@ -280,3 +277,4 @@ crossorigin="anonymous"></script>
  
 </body>
 </html>
+
